--- a/blogs-app/package.json
+++ b/blogs-app/package.json
@@ -13,6 +13,7 @@
     "@tiptap/extension-link": "^2.3.2",
     "@tiptap/extension-placeholder": "^2.3.2",
     "@tiptap/extension-underline": "^2.3.2",
+    "@tiptap/extension-youtube": "^2.3.2",
     "@tiptap/pm": "^2.3.2",
     "@tiptap/react": "^2.3.2",
     "@tiptap/starter-kit": "^2.3.2",
