--- a/blogs-app/package.json
+++ b/blogs-app/package.json
@@ -18,7 +18,11 @@
     "@tiptap/pm": "^2.3.2",
     "@tiptap/react": "^2.3.2",
     "@tiptap/starter-kit": "^2.3.2",
+    "@types/formidable": "^3.4.5",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "cloudinary": "^2.2.0",
+    "formidable": "^3.5.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
