--- a/blogs-app/package.json
+++ b/blogs-app/package.json
@@ -23,6 +23,8 @@
     "classnames": "^2.5.1",
     "cloudinary": "^2.2.0",
     "formidable": "^3.5.1",
+    "joi": "^17.13.1",
+    "mongoose": "^8.3.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
