--- a/blogs-app/package.json
+++ b/blogs-app/package.json
@@ -18,10 +18,12 @@
     "@tiptap/pm": "^2.3.2",
     "@tiptap/react": "^2.3.2",
     "@tiptap/starter-kit": "^2.3.2",
+    "@types/dateformat": "^5.0.2",
     "@types/formidable": "^3.4.5",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "cloudinary": "^2.2.0",
+    "dateformat": "^5.0.3",
     "formidable": "^2.0.1",
     "joi": "^17.13.1",
     "mongoose": "^8.3.5",
@@ -29,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
