--- a/blogs-app/package.json
+++ b/blogs-app/package.json
@@ -28,6 +28,7 @@
     "joi": "^17.13.1",
     "mongoose": "^8.3.5",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
