--- a/blogs-app/package.json
+++ b/blogs-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@tippyjs/react": "^4.2.6",
     "@tiptap/extension-image": "^2.3.2",
     "@tiptap/extension-link": "^2.3.2",
     "@tiptap/extension-placeholder": "^2.3.2",
@@ -25,6 +26,7 @@
     "cloudinary": "^2.2.0",
     "dateformat": "^5.0.3",
     "formidable": "^2.0.1",
+    "html-react-parser": "^5.1.10",
     "joi": "^17.13.1",
     "mongoose": "^8.3.5",
     "next": "14.2.3",
