--- a/blogs-app/package.json
+++ b/blogs-app/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.3.5",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
