--- a/blogs-app/package.json
+++ b/blogs-app/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.3.5",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-share": "^0.27.0",
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
